prevent horizontal tabs wrapping at small breakpoint

--- a/css/app.css
+++ b/css/app.css
@@ -6783,8 +6783,7 @@ ol.list-upper-roman {
     padding: 0; }
 
 .tabs-title a {
-  padding-top: 0;
-  padding-bottom: 0;
+  padding: 0 0.75rem 0;
   height: 45px;
   color: #0a0a0a;
   text-transform: uppercase;
@@ -6794,7 +6793,7 @@ ol.list-upper-roman {
   line-height: 45px; }
 
 .tabs-title + .tabs-title {
-  margin-left: 10px; }
+  margin-left: 0.25rem; }
 
 .tabs-title > a[aria-selected='false'] {
   background: rgba(255, 255, 255, 0.7); }
@@ -6805,13 +6804,19 @@ ol.list-upper-roman {
 .tabs-panel-title {
   margin-bottom: 1.25rem; }
 
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 640px) {
   .page-tabs {
     position: relative;
     margin-top: -45px;
     padding-top: 0; }
   .tabs-panel-title {
     text-align: center; } }
+
+@media screen and (min-width: 768px) {
+  .tabs-title a {
+    padding: 0 1.5rem 0; }
+  .tabs-title + .tabs-title {
+    margin-left: 0.5rem; } }
 
 h3 {
   color: #005593; }
